# Cigma-directory

./: Cargo.toml  README.md  lemon_directory.drawio
DataBridge/: Cargo.toml
DataBridge/src/: db_connector.rs  hashing.rs  lib.rs  models.rs
LemonDirectory/: Cargo.toml
LemonDirectory/src/: main.rs
MysqlDriver/: Cargo.toml
MysqlDriver/src/: lib.rs  mysql_driver.rs
src/: app_config.rs  main.rs
src/databases/: mod.rs  models.rs  mysql.rs  utils.rs
src/handlers/: create_user.rs
